# docling-fast

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  setup.sh
config/: blackwell.toml  default.toml  h100_1x.toml  h100_2x.toml  rtx3090_8x.toml  rtx_pro_2000.toml  v100_8x.toml
samples/bench/: manifest.json
src/: __init__.py  benchmark.py  config.py  extract.py  gpu_probe.py  metrics.py  pdf_catalog.py  pipeline.py  worker.py
